completed login feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         <a href="/register" class="nav-link" routerLink="register">Sign Up</a>
       </li>
       <li class="nav-item">
-        <a href="/login" class="nav-link" routerLink="loign">Login</a>
+        <a href="/login" class="nav-link" routerLink="login">Login</a>
       </li>
     </ul>
   </nav>
